src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --header-height: 3rem;
  --footer-height: 2.5rem;

  --main-padding: 1rem;

  --main-color: #232323;
  --main-color-light: oklch(from var(--main-color) calc(l + 0.06) c h);
  --button-color: #1a1a1a;
}

.recharts-cartesian-axis-tick-value {
  font-weight: 400;
  font-size: 0.9rem;
}

ul, li {
  padding: 0;
  margin: 0;
  list-style: none;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 350px;
  min-height: 100vh;
}

#root {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  overflow: hidden;
}

header,
footer,
main {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer,
header {
  background-color: var(--button-color);
}

header {
  height: var(--header-height);
  flex: 0 0 var(--header-height);
  justify-content: space-between;
  padding: 0 0.75rem;
  box-sizing: border-box;
}

footer {
  height: var(--footer-height);
  flex: 0 0 var(--footer-height);

}

main {
  padding: var(--main-padding);
  box-sizing: border-box;
  background-color: var(--main-color-light);
  height: calc(100vh - var(--header-height) - var(--footer-height));
  overflow: auto;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.4em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f9f9f9;
  }
}

button:focus-visible {
  outline: none;
  box-shadow: 0 0 0 3px rgba(0, 120, 255, 0.6);
  border-radius: 8px;
}

:root {
  --add-reading-height: 8rem;
  --reading-list-width: 18rem;
  /*--last-week-height: 7rem;*/
  --last-week-height: 10rem;
  --block-gap: 1rem;
  --block-padding: 0.5rem;

  /*--day-width: 5rem;*/
  --day-width: 7rem;
  --day-min-width: 3rem;
  --day-height: 6rem;
  --last-week-gap: 0.5rem;

  --control-button-size: 2.4rem;
  --control-divider-width: 2px;

  --last-week-min-width: calc(7 * var(--day-min-width) + 6 * var(--last-week-gap));
  --last-week-max-width: calc(7 * var(--day-width) + 6 * var(--last-week-gap));

  --dot-normal-color: #064920;
  --dot-normal-color-bright: #108e3e;
  /*--dot-high-normal-color: #4b5a2c;*/
  --dot-high-normal-color: #4e5a2c;
  /*--dot-high-normal-color-bright: #f39634;*/
  --dot-high-normal-color-bright: #838f34;
  --dot-low-color: #35357c;
  --dot-out-color: #955c79;
  --dot-grade-1-color: #71320a;
  --dot-grade-1-color-bright: #dc6514;
  --dot-grade-2-color: #7b3636;
  --dot-grade-2-color-bright: #ce585a;

  --dot-unset-color: gray;
  --dot-unset-color-bright: oklch(from var(--dot-unset-color) calc(l + 0.06) c h);
}

.color-grade-2 {
  --grade-color: var(--dot-grade-2-color);
  --grade-color-bright: var(--dot-grade-2-color-bright);
}

.color-grade-1 {
  --grade-color: var(--dot-grade-1-color);
  --grade-color-bright: var(--dot-grade-1-color-bright);
}

.color-normal {
  --grade-color: var(--dot-normal-color);
  --grade-color-bright: var(--dot-normal-color-bright);
}

.color-high-normal {
  --grade-color: var(--dot-high-normal-color);
  --grade-color-bright: var(--dot-high-normal-color-bright);
}

.color-low {
  --grade-color: var(--dot-low-color);
  --grade-color-bright: var(--dot-low-color);
}

.color-out {
  --grade-color: var(--dot-out-color);
  --grade-color-bright: var(--dot-out-color);
}

.color-unset {
  --grade-color: var(--dot-unset-color);
  --grade-color-bright: var(--dot-unset-color-bright);
}

.main {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 100%;
  gap: var(--block-gap) var(--block-gap);
  min-width: calc(var(--reading-list-width) + var(--block-gap) + var(--last-week-min-width) + 2 * var(--main-padding));
  overflow: hidden;
  position: relative;
}

/**/

.addReadingWrapper,
.readingListWrapper,
.graphWrapper,
.lastWeekWrapper {
  box-sizing: border-box;
  border-radius: 0.5rem;
}

.addReadingWrapper,
.graphWrapper,
.lastWeekWrapper {
  padding: var(--block-padding);
}

.readingListWrapper,
.graphWrapper,
.lastWeekWrapper {
  background-color: var(--main-color);
}

.addReadingWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
  min-height: var(--add-reading-height);
  max-width: calc(var(--reading-list-width) - var(--block-gap));

  & > button {
    font-size: 0.8rem;
  }
}

.readingListWrapper {
  font-size: 0.9rem;
  overflow: auto;
  display: flex;
  flex-direction: column;
  scrollbar-width: thin;
  flex-basis: calc(100% - var(--add-reading-height) - var(--block-gap));
  width: var(--reading-list-width);

}

.graphWrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  width: calc(100% - var(--reading-list-width) - var(--block-gap));
  flex-basis: calc(100% - var(--last-week-height) - var(--block-gap));
  min-width: var(--last-week-min-width);

}

.lastWeekWrapper {
  display: flex;
  gap: var(--last-week-gap);
  flex-basis: var(--last-week-height);
  max-width: var(--last-week-max-width);
  width: calc(100% - var(--reading-list-width) - var(--block-gap));
  min-width: var(--last-week-min-width);

  container-type: inline-size;
  container-name: lastWeekWrapper;
}
/* ... */

